feat/sidebar - add new animation for sidebar and give logout in the sidebar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -41,3 +41,8 @@ body {
 }
 
 
+input:-webkit-autofill {
+  -webkit-background-clip: text;
+  background-color: transparent;
+  -webkit-text-fill-color: white;
+}
